--- a/views/cards/savedCards.ejs
+++ b/views/cards/savedCards.ejs
@@ -112,7 +112,7 @@
                                                                 <%= card.pageA %>
                                                             </button>
                                                         </h2>
-                                                        <div id="flush-<%= card._id %>" class="accordion-collapse collapse"
+                                                        <div id="flush-<%- card._id %>" class="accordion-collapse collapse"
                                                             data-bs-parent="#accordion-cards">
                                                             <div class="accordion-body px-sm-5">
                                                                 <div class="row">
