--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -373,6 +373,29 @@ form .form-control, .form-select {
     background: none;
 }
 
+/*CLASH CHART*/
+#chart {
+    display: flex;
+  }
+
+#chart .bar {
+    width: 50px;
+    height: 200px;
+    background-color: #3498db;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+  }
+
+#chart .bar span {
+    width: 100%;
+    background-color: #2c3e50;
+    text-align: center;
+    color: white;
+    padding: 5px 0;
+    box-sizing: border-box;
+  }
+
 @media only screen and (max-width: 992px) {
     .nezobrazovat-na-mobilu-landing {
       display: none;
