--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -43,6 +43,11 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/about">O projektu</a>
                 </li>
+                <% if (currentUser && currentUser.admin) { %>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/blog">Blog</a>
+                  </li>
+                <% } %>
                 <% if (!currentUser) { %>
                 <li class="nav-item">
                   <a class="nav-link" href="/auth/user/login">Přihlásit se</a>
