--- a/views/premiumXmas.ejs
+++ b/views/premiumXmas.ejs
@@ -43,93 +43,60 @@
 
     <main role="main"> 
         <%- include('./partials/alert') %>
-    
+    <div class="snowflakes"></div>
     <section class="jumbotron about-header">
         <div class="container">
             <div class="row">
                 <div class="col-md-5 offset-md-1 my-5 p-4">
-                <h1 class="jumbotron-heading mb-3">InLege <span class="color-1">Premium</span></h1>
-                <p class="lead">InLege nabízí stovky kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</p>        
-            </div>
+                    <h1 class="jumbotron-heading mb-3">Vánoční <span class="color-1">Premium</span></h1>
+                    <p class="lead">InLege nabízí tisíce kartiček zdarma. Pro opravdové fajnšmekry však máme také rozšířenou nabídku kartiček a další funkce jen za pár korun měsíčně.</p>        
+                </div>
             </div>
         </div>
     </section>
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 offset-md-2 text-center my-5">
-                    <h1 class="mb-4">Naše vánoční balíčky -50 %</h1>
-                    <p class="fs-5">Většina obsahu aplikace InLege je dostupná zdarma s balíčkem Free. Lze si však zvolit také balíček Premium s měsíční, pololetní nebo roční platbou. V rámci balíčku Premium získáš více než 1 000 prémiových kartiček a další funkce.</p>
+                <div class="col-md-8 offset-md-2 text-center mt-5">
+                    <div class="d-flex justify-content-center align-items-center mb-2">
+                        <img src="/img/xmas_tree.png" alt="" style="max-width: 100px;">
+                        <h1 class="mb-0 mx-lg-3">Vánoční 50% sleva</h1>
+                    </div>
+                    <p class="fs-5 mt-4">Milé studentky a studenti, přejeme vám radostné svátky plné lásky a pohody! Rádi bychom vám poděkovali za neuvěřitelný zájem o náš projekt a jako odměnu jsme si pro vás připravili 50% slevu na předplatné Premium ve všech variantách.</p>
+                    <p class="fs-5">Akce platí pro předplatné aktivované <strong class="color-1">do 23. prosince 23:59 hodin</strong>. Snížená cena pak bude platit, dokud předplatné nezrušíte.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="premium-packages">
+    
+    <section class="premium-packages mt-5">
         <div class="container">
             <div class="row px-lg-5 px-2">
-                <div class="col-12 col-lg-3 price-table-wrapper p-0">
+                
+                <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper-1 p-0">
                     <div class="card premium-plan-card m-1 mt-0  ">
                         <div class="card-header">
-                            <div>
-                                <p class="card-header-title">Free</p>
-                                <p class="card-header-period">zdarma</p>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img src="/img/xmas_gift.png" alt="" style="max-width: 50px;">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">měsíční</p>
+                                </div>
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                             <div class="price-tag-inner">
-                                <span class="price">0 Kč</span> / <span class="period">napořád</span>
+                                <p class="mb-0 xmas-price-title">Vánoční cena</p>
+                                <span class="price color-1">99 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
-                        <p class="text-center monthly-equivalent" style="opacity: 0">(0 Kč za měsíc<sup>*</sup>)</p>
-                        <div class="px-3 d-flex justify-content-center premium-card-btn-div">
-                            <% if (!currentUser) { %>
-                                <a href="/auth/user/new" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
-                            <% } %>
-                            <% if (currentUser && !currentUser.isPremium) { %>
-                                <a href="#" id="checkout-button-freemium" class="btn btn-danger my-3 disabled w-100" style="min-width:115px">Balíček Free je aktivní</a> 
-                            <% } %>
-                            <% if (currentUser && currentUser.isPremium) { %>
-                                <a href="#" class="btn btn-danger my-3 disabled w-100">Je aktivní balíček Premium</a> 
-                            <% } %>
-                        </div>
-                        <div class="height-85 premium-card-info-div">
-                            <p class="text-center my-3">Bezplatná verze aplikace bez časového omezení.</p>
-                            <div class="px-2 color-1">
-                                <hr class="custom-hr">
-                            </div>
-                            <p class="text-center mt-4 mb-2 co-ziskas-text"><b>Co získáš?</b></p>
-                            <ul class="text-smaller premium-card-list">
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            více než 1 800 kartiček
-                                        </div>
-                                    </div>
-                                </li>
-                                <li style="opacity: 0">placeholder</li>
-                                <li style="opacity: 0">placeholder</li>
-                                <li style="opacity: 0">placeholder</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
-                    <div class="card premium-plan-card m-1 mt-0  ">
-                        <div class="card-header">
-                            <div>
-                                <p class="card-header-title">Premium</p>
-                                <p class="card-header-period">měsíční</p>
-                            </div>
-                        </div>
-                        <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
-                            <div class="price-tag-inner ">
-                                <span class="price">199 Kč</span> / <span class="period">měsíčně</span>
+                        <p class="text-center monthly-equivalent">(99 Kč za měsíc<sup>*</sup>)</p>
+                        <div class="price-tag-outer d-flex justify-content-center">
+                            <div class="price-tag-inner lower-opacity">
+                                <p class="mb-0">Původní cena</p>
+                                <span class="xmas-old-price ">199 Kč</span> / <span class="period">měsíčně</span>
                             </div>
                         </div> 
-                        <p class="text-center monthly-equivalent">(199 Kč za měsíc<sup>*</sup>)</p>
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
@@ -183,25 +150,34 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li style="opacity: 0">placeholder</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
+                <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper-2 p-0">
                     <div class="card premium-plan-card m-1 mt-0 premium-recomended  ">
                         <div class="card-header">
-                            <div>
-                                <p class="card-header-title">Premium</p>
-                                <p class="card-header-period">půlroční</p>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img src="/img/xmas_gift.png" alt="" style="max-width: 50px;">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">půlroční</p>
+                                </div>
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                             <div class="price-tag-inner">
-                                <span class="price">890 Kč</span> / <span class="period">půlročně</span>
+                                <p class="mb-0 xmas-price-title">Vánoční cena</p>
+                                <span class="price color-1">445 Kč</span> / <span class="period">půlročně</span>
                             </div>
                         </div> 
-                        <p class="text-center monthly-equivalent">(149 Kč za měsíc<sup>*</sup>)</p>
+                        <p class="text-center monthly-equivalent">(75 Kč za měsíc<sup>*</sup>)</p>
+                        <div class="price-tag-outer d-flex justify-content-center">
+                            <div class="price-tag-inner lower-opacity">
+                                <p class="mb-0">Původní cena</p>
+                                <span class="xmas-old-price ">890 Kč</span> / <span class="period">půlročně</span>
+                            </div>
+                        </div> 
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
@@ -241,16 +217,6 @@
                                             <i class="fas fa-check-circle"></i>
                                         </div>
                                         <div class="px-2">
-                                            ušetříš 304 Kč<sup>**</sup>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
                                             dalších 1 000+ kartiček
                                         </div>
                                     </div>
@@ -269,20 +235,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 mt-5 mt-lg-0 price-table-wrapper p-0">
+                <div class="col-12 col-lg-4 mt-5 mt-lg-0 price-table-wrapper-3 p-0">
                     <div class="card premium-plan-card m-1 mt-0  ">
                         <div class="card-header">
-                            <div>
-                                <p class="card-header-title">Premium</p>
-                                <p class="card-header-period">roční</p>
+                            <div class="d-flex justify-content-center align-items-center">
+                                <img src="/img/xmas_gift.png" alt="" style="max-width: 50px;">
+                                <div>
+                                    <p class="card-header-title">Premium</p>
+                                    <p class="card-header-period">roční</p>
+                                </div>
                             </div>
                         </div>
                         <div class="price-tag-outer d-flex justify-content-center p-3 pb-0 mt-3">
                             <div class="price-tag-inner">
-                                <span class="price">1 490 Kč</span> / <span class="period">ročně</span>
-                            </div> 
-                        </div>
-                        <p class="text-center monthly-equivalent">(124 Kč za měsíc<sup>*</sup>)</p>
+                                <p class="mb-0 xmas-price-title">Vánoční cena</p>
+                                <span class="price color-1">745 Kč</span> / <span class="period">ročně</span>
+                            </div>
+                        </div> 
+                        <p class="text-center monthly-equivalent">(62 Kč za měsíc<sup>*</sup>)</p>
+                        <div class="price-tag-outer d-flex justify-content-center">
+                            <div class="price-tag-inner lower-opacity">
+                                <p class="mb-0">Původní cena</p>
+                                <span class="xmas-old-price ">1 490 Kč</span> / <span class="period">ročně</span>
+                            </div>
+                        </div> 
                         <div class="px-3 d-flex justify-content-center premium-card-btn-div">
                             <% if (!currentUser) { %>
                                 <a href="/auth/user/new?premium=true" class="btn btn-danger my-3 w-100">Zaregistrovat se a aktivovat</a> 
@@ -313,16 +289,6 @@
                                         </div>
                                         <div class="px-2">
                                             vše z balíčku Free
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="d-flex align-items-center">
-                                        <div>
-                                            <i class="fas fa-check-circle"></i>
-                                        </div>
-                                        <div class="px-2">
-                                            ušetříš 898 Kč<sup>**</sup>
                                         </div>
                                     </div>
                                 </li>
