--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -39,7 +39,8 @@
                     <div class="row">
                         <div class="col-12">
                             <h5 class="mb-1 mt-3">Navazující balíček</h5> 
-                            <p><%= nextSection.name %></p>
+                            <p class="mb-0"><%= nextSection.name %></p>
+                            <p class="text-small text-muted">(<%= nextSection.shortDescription %>)</p>
                         </div>
                     </div>
                     <div class="row mt-3">
