--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -157,7 +157,7 @@
         </div>
         <div class="modal-body" style="text-align: center;">
             <h4 class="modal-title mb-3" style="text-align: center;">Naše vize a obsah zdarma</h4>
-            <p class="px-3" style="text-align: left;">V InLege věříme, že kvalitní studijní materiály by měly být dostupné <strong>každému a bezplatně</strong>. Proto jsme se rozhodli udržet <strong>nejméně 50 % obsahu</strong> vždy zdarma. Registrace je nutná pouze pro ukládání tvých rozpracovaných kartiček a pro správný chod portálu.</p>
+            <p class="px-3" style="text-align: left;">V InLege věříme, že kvalitní studijní materiály by měly být dostupné <strong>každému a bezplatně</strong>. Proto jsme se rozhodli udržet <strong>nejméně 50 % obsahu</strong> vždy zdarma. Registrace je nutná pouze pro ukládání tvých rozpracovaných balíčků a pro správný chod portálu.</p>
             <p class="px-3" style="text-align: left;"><strong>Registrace</strong> je bezplatná a <strong>nezavazuje tě k žádné platbě</strong>, a to ani v budoucnu. Můžeš klidně využívat InLege v jeho bezplatné verzi tak dlouho, jak ti bude vyhovovat.</p>
             <p class="px-3" style="text-align: left;">Pro ty, kteří mají větší nároky na obsah a další funkce, jsme připravili <strong>možnost aktivovat</strong> si pravidelné <strong>předplatné Premium</strong> od 124 Kč měsíčně, které lze kdykoliv zrušit. InLege je však navržené tak, aby bylo i v bezplatné verzi užitečné a pomáhalo ti efektivně se připravovat na zkoušky.</p>
             <p><button class="btn btn-outline-danger" data-bs-dismiss="modal">Zavřít</button></p>
