--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -233,7 +233,7 @@
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Zavřít</button>
-            <button class="manage-billing-button btn btn-sm btn-danger" type="submit">
+            <button class="btn btn-sm btn-danger" type="submit">
                 Uložit
             </button>
             </div>
