gtag adwords; odkud o nas vite logic; text emailu prodlouzeni

--- a/views/admin/showUserDetail.ejs
+++ b/views/admin/showUserDetail.ejs
@@ -41,6 +41,13 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold d-flex align-items-center">
+                        <p>Zdroj</p>
+                    </div>
+                    <div class="col-8 d-flex align-items-center">
+                        <%= user.source %> 
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold d-flex align-items-center">
                         <p>Počet nastudovaných kartiček</p>
                     </div>
                     <div class="col-8 d-flex align-items-center">
