--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -51,6 +51,17 @@
                             <option value="Neuvedeno">Nechci uvést</option>
                           </select>
                     </div>
+                    <div>
+                        <select class="form-select" name="source" id="source">
+                            <option selected value="neuvedeno">Jak jste se o nás dozvěděli?</option>
+                            <option value="pratele">Od kamaráda/ky</option>
+                            <option value="ucitele">Od učitele/ky</option>
+                            <option value="instagram">Na Instagramu</option>
+                            <option value="facebook">Na Facebooku</option>
+                            <option value="google">Na Googlu</option>
+                            <option value="odjinud">Odjinud</option>
+                          </select>
+                    </div>
 
 
                     <div class="mt-3">
