--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -172,6 +172,65 @@
                     </div>
                 </div>
             </div>
+            <div class="card stats p-3 mt-3">
+                <h5 class="mb-3">Zdroje registrací</h5>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Přátelé</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.pratele %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Učitelé</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.ucitele %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Instagram</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.instagram %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Facebook</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.facebook %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Google</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.google %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Odjinud</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.odjinud %>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p>Neuvedeno</p>
+                    </div>
+                    <div class="col-md-2">
+                        <%= sources.neuvedeno %>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-md-3 mb-3 pt-3">
             <div class="card stats p-3">
