--- a/views/cards/showAjax.ejs
+++ b/views/cards/showAjax.ejs
@@ -37,6 +37,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-NNQ2L4K9C9');
+  gtag('config', 'AW-990983899');
 </script>
 
 <body class="d-flex flex-column vh-100">
